aligment the folder

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <button id="reset">Reset</button>
 
     <!-- Load external JavaScript file -->
-    <script src="closureScript.js"></script>
+    <script src="./js/closureScript.js"></script>
   </body>
 </html>
